--- a/docs/central/湖南科技大学.md
+++ b/docs/central/湖南科技大学.md
@@ -30,7 +30,7 @@
 
 - A1: 有！！！
 
-- A2: 无
+- A2: 通常大一大二早上要去早签 一二节课有课就在教室 没课就在操场签到 5月到9月 7点10一次7点40二次  10月到4月7点到7点40就一次
 
 ## Q: 每学期跑步打卡的要求是多少公里，可以骑车吗？
 
@@ -130,15 +130,13 @@
 
 ## Q: 学校的收发快递政策怎么样？
 
-- A1: 在学校外面200m的菜鸟驿站
+- A1: 在学校北门外面有2个菜鸟驿站
 
-- A2: 很自由
+- A2: 京东收件在南校
 
 ## Q: 学校里面的共享单车数目与种类如何？
 
-- A1: 两三种吧，还挺好的
-
-- A2: 只有腾讯的电单车，两块钱一次
+- A:现在只有小红车 2块钱起步
 
 ## Q: 现阶段学校的门禁情况如何？
 
@@ -148,7 +146,7 @@
 
 ## Q: 宿舍晚上查寝吗，封寝吗，晚归能回去吗？
 
-- A1: 查寝，晚归能回，但扣分
+- A1: 查寝，晚归能回，但扣分  只查大一大二 见过其他宿舍区（好像是二区还是三区）凌晨2点多不让学生进去
 
 - A2: 查寝，不封寝，十点查，晚归可以回
 
